feat(items): 添加新的实体类型和物品功能
- 新增异常实体类型注册类 AbnormalitiesEntityTypes
- 添加训练兔、失乐园尖刺和魔法子弹实体定义
- 创建物品数据组件提示事件 AddItemDataComponentTooltipEvent
- 重构装甲物品注册类 ModEgos 为 ArmorItems
- 添加混沌刀物品 ChaosKnifeItem 支持切换伤害类型
- 新增创造模式理智值工具 CreativeRationalityToolItem
- 移除 DamageContainerMixin 中的随机伤害逻辑
- 更新 DamageSourceMixin 的伤害类型能力获取方式
- 增强 DataComponentsRegisterUtil 工具类支持缓存编码
- 更新数据生成器引用从 ModEgoCurios 到 EgoCurioItems
- 添加镇爆棍物品 DetonatingBatonItem
- 创建 EGO 护甲基础类 EgoArmorItem
- 新增 EGO 护甲物品注册类 EgoArmorItems
- 重构 EgoCurioItem 包路径并优化属性构建器
- 重命名 ModEgoCurios 为 EgoCurioItems 并调整访问权限
- 创建统一的 EGO 物品管理类 EgoItems
- 添加 EGO 武器基础类 EgoWeaponItem